# kalshi-auto-trader

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.py  execute_trades.py  kalshi_client.py  market_match.py  model.py  pyproject.toml  trade_log.py
.github/workflows/: tests.yml
data/: trade_log.csv
docs/: strategy-guide.md
kalshi_auto_trader/: __init__.py  ledger.py  orders.py  probability.py  risk.py  settings.py  strategy.py  text.py
kalshi_auto_trader/kalshi/: __init__.py  client.py
kalshi_auto_trader/world_cup/: __init__.py  config.py  markets.py  model.py  trader.py
tests/: test_cli.py  test_client.py  test_exports.py  test_probability.py  test_risk.py  test_safety.py  test_text.py  test_trader.py
