[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-auto-trader"
version = "0.1.0"
description = "Reusable Kalshi trading utilities plus app-specific prediction strategies."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "cryptography>=42.0",
]

[project.scripts]
kalshi-world-cup = "kalshi_auto_trader.world_cup.trader:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["kalshi_auto_trader*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
